2016-10-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (overlayHandler): implement a one second
	update for stats overlay.
	* src/client/GameEngine.hpp (GameEngine): add a FPS geometry buffer.

2016-10-30  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (onOptions): fix the wrong NULL test issue.

	* src/client/NyiDialog.cpp (NyiDialog): handle the uniqueName parameter
	and a new parent window to allow multiple dialogs in the same context
	* src/client/NyiDialog.cpp (NyiDialog): add the uniqueName member.

	* src/client/GameEngine.cpp (onLocalTest): add a second NyiDialog
	instance for a test.

2016-10-29  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (onNetworkPlay): now uses the new
	NyiDialog class.
	* src/client/NyiDialog.cpp (NyiDialog): implements the featureName
	text.
	* src/client/NyiDialog.hpp (NyiDialog): uses CeguiDialog as a base
	class.

	* src/client/CeguiDialog.cpp (CeguiDialog): correctly destroy
	the underlying cegui window.

	* src/client/CeguiDialog.cpp (onOk): hide the dialog on event.
	* media/layouts/nyi_dialog.layout: remove background.
	* src/client/GameEngine.cpp (onNetworkPlay): create a CeguiDoalog
	instance and show it.
	* src/client/GameEngine.cpp (onExit): cegui event callback returns
	true value.
	* src/client/GameEngine.cpp (Exit_OnClick): rename to onExit().

2016-10-28  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/CeguiDialog.hpp (CeguiDialog): implement basic visibility
	thing, including show(), hide() and isVisible().

	* CMakeLists.txt (client-src): add CeguiDialog.cpp to client sources.
	* src/client/CeguiDialog.cpp (CeguiDialog): basic constructor
	implementation.
	* src/client/CeguiDialog.hpp (CeguiDialog): add basic class and members.

2016-10-27  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/nyi_dialog.layout: create a basic Not Yet Implemented
	layout file.

2016-10-26  Jérôme Pasquier  <rainbru@free.fr>
