@@ -3,13 +3,17 @@
 * v1.0.0
 ** v0.1.0
 *** v0.0.6
+**** More client work
+- [ ] Try to use the 'FetteUNZFraktur' font from the CEGUI demo
+- [ ] Start with the localTest menu
 **** Postponed unit tests thing
-***** Search for the guile error
-- [ ] The same error occurs in two builds now
+***** DONE Search for the guile error
+- [X] The same error occurs in two builds now
   =guile: uncaught throw to system-error: (open-file ~A: ~S (No such file or directory scm/test.scm) (2))=
-  - [ ] Maybe try for GTest
+  - [X] Maybe try for GTest
     Because we have localc segfault
     The segfault isn't here anymore but now the guile error is local
+Error is fixed, was due to a src/services/Services.hpp old code    
 ***** Improve CI with other OSes
       CLOCK: [2016-06-11 sam. 02:39]--[2016-06-11 sam. 02:45] =>  0:06
 - [ ] Start with osx but allow_failure
@@ -90,6 +94,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-31 lun. 04:07]--[2016-10-31 lun. 04:35] =>  0:28
      CLOCK: [2016-10-31 lun. 01:50]--[2016-10-31 lun. 02:53] =>  1:03
      CLOCK: [2016-10-30 dim. 01:34]--[2016-10-30 dim. 01:57] =>  0:23
      CLOCK: [2016-10-30 dim. 01:01]--[2016-10-30 dim. 01:17] =>  0:16
@@ -212,10 +217,11 @@
   - [X] First, add the geometrybuffer in the bottom right corner
   - [X] Get the RenderTarget stats every second
   - [X] Print essential values
-- [ ] Try to use the 'FetteUNZFraktur' font from the CEGUI demo
-- [ ] These is (again) a segfault when cancel the Ogre3D config dialog
 - [ ] Must implement a GameState system
-  - [ ] Current work goes in gsMainMenu
+  - Current work goes in gsMainMenu
+  - [ ] Implement it as GameState/StateManager with unit tests
+  - [ ] Then, GameEngine publicly inherits StateMnager
+- [ ] These is (again) a segfault when cancel the Ogre3D config dialog
 **** DONE [test_ogre1.9] Let's test if switching to Ogre1.9
      CLOCK: [2016-10-12 mer. 01:19]--[2016-10-12 mer. 02:07] =>  0:48
      fix the client's issues
